tests/paczka1/fuzzy1/52432960.err
Error in line 4: EOgG2R2Sv8I A763 36,3
Error in line 12: PnNdxx A901 17,9
Error in line 16: PnNdxx S912 55,5
Error in line 22: 6uaJZTy S912 39,2
Error in line 21: PnNdxx A901 78,3
Error in line 26: PnNdxx S912 94,9
Error in line 30: s2K9GpcyCK S912 66,5
